fix image overflowing

--- a/src/routes/viewMovie/viewMovie.scss
+++ b/src/routes/viewMovie/viewMovie.scss
@@ -33,6 +33,7 @@
       grid-column: 1;
       grid-row: 1 / span 6;
       border-radius: 10px 0 0 10px;
+      width: 280px;
       @media (max-width: 1300px) {
         width: 200px;
         border-radius: 10px 0 0 0;
